--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -22,7 +22,7 @@
 
 ::before,
 ::after {
-  --tw-content: "";
+  --tw-content: '';
 }
 
 /*
@@ -44,10 +44,9 @@ html,
   -moz-tab-size: 4;
   /* 3 */
   -o-tab-size: 4;
-  tab-size: 4;
+     tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -90,7 +89,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
+          text-decoration: underline dotted;
 }
 
 /*
@@ -136,8 +135,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
   font-feature-settings: normal;
   /* 2 */
@@ -236,9 +234,9 @@ select {
 */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -285,7 +283,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 2. Correct the outline style in Safari.
 */
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -378,8 +376,7 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
-input::-moz-placeholder,
-textarea::-moz-placeholder {
+input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -447,9 +444,7 @@ video {
   display: none;
 }
 
-*,
-::before,
-::after {
+*, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -459,19 +454,19 @@ video {
   --tw-skew-y: 0;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  --tw-pan-x: ;
-  --tw-pan-y: ;
-  --tw-pinch-zoom: ;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position: ;
-  --tw-gradient-via-position: ;
-  --tw-gradient-to-position: ;
-  --tw-ordinal: ;
-  --tw-slashed-zero: ;
-  --tw-numeric-figure: ;
-  --tw-numeric-spacing: ;
-  --tw-numeric-fraction: ;
-  --tw-ring-inset: ;
+  --tw-gradient-from-position:  ;
+  --tw-gradient-via-position:  ;
+  --tw-gradient-to-position:  ;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgb(59 130 246 / 0.5);
@@ -479,24 +474,24 @@ video {
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-  --tw-blur: ;
-  --tw-brightness: ;
-  --tw-contrast: ;
-  --tw-grayscale: ;
-  --tw-hue-rotate: ;
-  --tw-invert: ;
-  --tw-saturate: ;
-  --tw-sepia: ;
-  --tw-drop-shadow: ;
-  --tw-backdrop-blur: ;
-  --tw-backdrop-brightness: ;
-  --tw-backdrop-contrast: ;
-  --tw-backdrop-grayscale: ;
-  --tw-backdrop-hue-rotate: ;
-  --tw-backdrop-invert: ;
-  --tw-backdrop-opacity: ;
-  --tw-backdrop-saturate: ;
-  --tw-backdrop-sepia: ;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
 }
 
 ::backdrop {
@@ -509,19 +504,19 @@ video {
   --tw-skew-y: 0;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  --tw-pan-x: ;
-  --tw-pan-y: ;
-  --tw-pinch-zoom: ;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position: ;
-  --tw-gradient-via-position: ;
-  --tw-gradient-to-position: ;
-  --tw-ordinal: ;
-  --tw-slashed-zero: ;
-  --tw-numeric-figure: ;
-  --tw-numeric-spacing: ;
-  --tw-numeric-fraction: ;
-  --tw-ring-inset: ;
+  --tw-gradient-from-position:  ;
+  --tw-gradient-via-position:  ;
+  --tw-gradient-to-position:  ;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgb(59 130 246 / 0.5);
@@ -529,24 +524,24 @@ video {
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-  --tw-blur: ;
-  --tw-brightness: ;
-  --tw-contrast: ;
-  --tw-grayscale: ;
-  --tw-hue-rotate: ;
-  --tw-invert: ;
-  --tw-saturate: ;
-  --tw-sepia: ;
-  --tw-drop-shadow: ;
-  --tw-backdrop-blur: ;
-  --tw-backdrop-brightness: ;
-  --tw-backdrop-contrast: ;
-  --tw-backdrop-grayscale: ;
-  --tw-backdrop-hue-rotate: ;
-  --tw-backdrop-invert: ;
-  --tw-backdrop-opacity: ;
-  --tw-backdrop-saturate: ;
-  --tw-backdrop-sepia: ;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
 }
 
 .tw-absolute {
@@ -561,12 +556,20 @@ video {
   bottom: -115px;
 }
 
+.tw-bottom-\[-147px\] {
+  bottom: -147px;
+}
+
 .tw-bottom-\[-98px\] {
   bottom: -98px;
 }
 
 .tw-bottom-\[0px\] {
   bottom: 0px;
+}
+
+.tw-left-\[-97px\] {
+  left: -97px;
 }
 
 .tw-left-\[0px\] {
@@ -599,6 +602,10 @@ video {
 
 .tw-right-\[-73px\] {
   right: -73px;
+}
+
+.tw-right-\[-96px\] {
+  right: -96px;
 }
 
 .tw-right-\[0px\] {
@@ -637,6 +644,10 @@ video {
   top: calc(50% - 259.5px);
 }
 
+.tw-top-\[calc\(50\%_-_84px\)\] {
+  top: calc(50% - 84px);
+}
+
 .tw-z-\[1\] {
   z-index: 1;
 }
@@ -659,6 +670,10 @@ video {
   margin-bottom: 15rem;
 }
 
+.tw-mt-\[-10px\] {
+  margin-top: -10px;
+}
+
 .tw-box-border {
   box-sizing: border-box;
 }
@@ -675,12 +690,20 @@ video {
   display: none;
 }
 
+.tw-h-14 {
+  height: 3.5rem;
+}
+
 .tw-h-16 {
   height: 4rem;
 }
 
 .tw-h-2 {
   height: 0.5rem;
+}
+
+.tw-h-28 {
+  height: 7rem;
 }
 
 .tw-h-6 {
@@ -691,13 +714,52 @@ video {
   height: 168.6px;
 }
 
+.tw-h-\[174px\] {
+  height: 174px;
+}
+
+.tw-h-\[197px\] {
+  height: 197px;
+}
+
+.tw-h-\[228px\] {
+  height: 228px;
+}
 
 .tw-h-\[233px\] {
   height: 233px;
 }
 
+.tw-h-\[25px\] {
+  height: 25px;
+}
+
+.tw-h-\[289px\] {
+  height: 289px;
+}
+
+.tw-h-\[312px\] {
+  height: 312px;
+}
+
+.tw-h-\[329px\] {
+  height: 329px;
+}
+
 .tw-h-\[349px\] {
   height: 349px;
+}
+
+.tw-h-\[373px\] {
+  height: 373px;
+}
+
+.tw-h-\[400px\] {
+  height: 400px;
+}
+
+.tw-h-full {
+  height: 100%;
 }
 
 .tw-max-h-full {
@@ -740,8 +802,16 @@ video {
   width: 1370px;
 }
 
+.tw-w-\[170px\] {
+  width: 170px;
+}
+
 .tw-w-\[198px\] {
   width: 198px;
+}
+
+.tw-w-\[233px\] {
+  width: 233px;
 }
 
 .tw-w-\[243px\] {
@@ -780,12 +850,20 @@ video {
   width: 400px;
 }
 
+.tw-w-\[540px\] {
+  width: 540px;
+}
+
 .tw-w-\[580px\] {
   width: 580px;
 }
 
 .tw-w-\[590px\] {
   width: 590px;
+}
+
+.tw-w-\[730px\] {
+  width: 730px;
 }
 
 .tw-w-\[81px\] {
@@ -860,41 +938,12 @@ video {
   min-width: 70px;
 }
 
-
-.tw-min-w-\[33px\] {
-  min-width: 33px;
+.tw-min-w-\[80px\] {
+  min-width: 80px;
 }
 
-.tw-min-w-\[113px\] {
-  min-width: 113px;
-}
-
-.tw-min-w-\[199px\] {
-  min-width: 199px;
-}
-
-.tw-min-w-\[363px\] {
-  min-width: 363px;
-}
-
-.tw-min-w-\[36px\] {
-  min-width: 36px;
-}
-
-.tw-min-w-\[51px\] {
-  min-width: 51px;
-}
-
-.tw-min-w-\[52px\] {
-  min-width: 52px;
-}
-
-.tw-min-w-\[66px\] {
-  min-width: 66px;
-}
-
-.tw-min-w-\[674px\] {
-  min-width: 674px;
+.tw-min-w-\[83px\] {
+  min-width: 83px;
 }
 
 .tw-max-w-full {
@@ -921,14 +970,8 @@ video {
   flex-shrink: 0;
 }
 
-.tw-flex-grow {
-  flex-grow: 1;
-}
-
 .tw-transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
-    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
-    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-cursor-pointer {
@@ -1011,7 +1054,9 @@ video {
   gap: 32px;
 }
 
-
+.tw-gap-\[35px\] {
+  gap: 35px;
+}
 
 .tw-gap-\[39px\] {
   gap: 39px;
@@ -1021,10 +1066,41 @@ video {
   gap: 44px;
 }
 
-.tw-gap-\[24px\] {
-  gap: 24px;
+.tw-gap-\[49px\] {
+  gap: 49px;
 }
 
+.tw-gap-\[4px\] {
+  gap: 4px;
+}
+
+.tw-gap-\[56px\] {
+  gap: 56px;
+}
+
+.tw-gap-\[5px\] {
+  gap: 5px;
+}
+
+.tw-gap-\[62px\] {
+  gap: 62px;
+}
+
+.tw-gap-\[69px\] {
+  gap: 69px;
+}
+
+.tw-gap-\[6px\] {
+  gap: 6px;
+}
+
+.tw-gap-\[70px\] {
+  gap: 70px;
+}
+
+.tw-gap-\[96px\] {
+  gap: 96px;
+}
 
 .tw-self-stretch {
   align-self: stretch;
@@ -1034,21 +1110,40 @@ video {
   overflow: hidden;
 }
 
-.tw-overflow-x-auto {
-  overflow-x: auto;
-}
-
 .tw-whitespace-nowrap {
   white-space: nowrap;
 }
-
 
 .tw-rounded {
   border-radius: 0.25rem;
 }
 
-.tw-rounded-3xl {
-  border-radius: 1.5rem;
+.tw-rounded-31xl {
+  border-radius: 50px;
+}
+
+.tw-rounded-3xs {
+  border-radius: 10px;
+}
+
+.tw-rounded-8xs {
+  border-radius: 5px;
+}
+
+.tw-rounded-\[50\%\] {
+  border-radius: 50%;
+}
+
+.tw-rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.tw-rounded-md {
+  border-radius: 0.375rem;
+}
+
+.tw-rounded-xl {
+  border-radius: 20px;
 }
 
 .tw-rounded-b-none {
@@ -1061,20 +1156,8 @@ video {
   border-top-right-radius: 80px;
 }
 
-.tw-rounded-\[50\%\] {
-  border-radius: 50%;
-}
-
-.tw-rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.tw-rounded-xl {
-  border-radius: 20px;
-}
-
-.tw-rounded-md {
-  border-radius: 0.375rem;
+.tw-border-\[0\.5px\] {
+  border-width: 0.5px;
 }
 
 .tw-border-\[0px\] {
@@ -1085,16 +1168,17 @@ video {
   border-width: 1px;
 }
 
-.tw-border-\[0\.5px\] {
-  border-width: 0.5px;
-}
-
 .tw-border-solid {
   border-style: solid;
 }
 
 .tw-border-none {
   border-style: none;
+}
+
+.tw-border-darkslategray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 89 64 / var(--tw-border-opacity));
 }
 
 .tw-border-gainsboro-300 {
@@ -1107,14 +1191,14 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.tw-bg-chestnut-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(123 120 91 / var(--tw-bg-opacity));
-}
-
 .tw-bg-darkslategray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(40 90 67 / var(--tw-bg-opacity));
+}
+
+.tw-bg-darkslategray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 89 64 / var(--tw-bg-opacity));
 }
 
 .tw-bg-darkslategray-400 {
@@ -1127,22 +1211,37 @@ video {
   background-color: rgb(224 216 205 / var(--tw-bg-opacity));
 }
 
-
-
-.tw-bg-chestnut-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+.tw-bg-gainsboro-400 {
+  background-color: rgba(217, 217, 217, 0.03);
 }
 
+.tw-bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.tw-bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.tw-bg-whitesmoke-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 248 / var(--tw-bg-opacity));
+}
+
+.tw-bg-whitesmoke-200 {
+  background-color: rgba(247, 248, 250, 0.8);
+}
 
 .tw-object-contain {
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 .tw-object-cover {
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .tw-px-0 {
@@ -1150,7 +1249,15 @@ video {
   padding-right: 0px;
 }
 
+.tw-px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
 
+.tw-px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
+}
 
 .tw-px-20 {
   padding-left: 5rem;
@@ -1175,6 +1282,11 @@ video {
 .tw-px-\[37px\] {
   padding-left: 37px;
   padding-right: 37px;
+}
+
+.tw-px-\[43px\] {
+  padding-left: 43px;
+  padding-right: 43px;
 }
 
 .tw-px-\[45px\] {
@@ -1212,13 +1324,61 @@ video {
   padding-bottom: 0.5rem;
 }
 
-
-
-.tw-px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.tw-py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
+.tw-py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.tw-py-64 {
+  padding-top: 16rem;
+  padding-bottom: 16rem;
+}
+
+.tw-py-\[39px\] {
+  padding-top: 39px;
+  padding-bottom: 39px;
+}
+
+.tw-pb-0 {
+  padding-bottom: 0px;
+}
+
+.tw-pb-12 {
+  padding-bottom: 3rem;
+}
+
+.tw-pb-24 {
+  padding-bottom: 6rem;
+}
+
+.tw-pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.tw-pb-9 {
+  padding-bottom: 2.25rem;
+}
+
+.tw-pb-\[59px\] {
+  padding-bottom: 59px;
+}
+
+.tw-pb-\[98px\] {
+  padding-bottom: 98px;
+}
+
+.tw-pl-0 {
+  padding-left: 0px;
+}
+
+.tw-pl-0\.5 {
+  padding-left: 0.125rem;
+}
 
 .tw-pl-5 {
   padding-left: 1.25rem;
@@ -1226,6 +1386,14 @@ video {
 
 .tw-pl-\[101px\] {
   padding-left: 101px;
+}
+
+.tw-pl-px {
+  padding-left: 1px;
+}
+
+.tw-pr-0 {
+  padding-right: 0px;
 }
 
 .tw-pr-\[100px\] {
@@ -1248,14 +1416,285 @@ video {
   padding-right: 90px;
 }
 
+.tw-pr-px {
+  padding-right: 1px;
+}
+
 .tw-pt-0 {
   padding-top: 0px;
 }
 
+.tw-pt-16 {
+  padding-top: 4rem;
+}
+
+.tw-pt-24 {
+  padding-top: 6rem;
+}
+
+.tw-pt-6 {
+  padding-top: 1.5rem;
+}
+
+.tw-pt-\[18px\] {
+  padding-top: 18px;
+}
+
+.tw-pt-\[21px\] {
+  padding-top: 21px;
+}
+
+.tw-pt-\[30px\] {
+  padding-top: 30px;
+}
+
+.tw-pt-\[46px\] {
+  padding-top: 46px;
+}
+
+.tw-pt-\[58px\] {
+  padding-top: 58px;
+}
+
+.tw-text-left {
+  text-align: left;
+}
+
+.tw-text-center {
+  text-align: center;
+}
+
+.tw-text-right {
+  text-align: right;
+}
+
+.tw-font-body-2-medium {
+  font-family: Inter;
+}
+
+.tw-font-body-medium {
+  font-family: Roboto;
+}
+
+.tw-font-lato {
+  font-family: Lato;
+}
+
+.tw-font-raleway {
+  font-family: Raleway;
+}
+
+.tw-font-sans {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.tw-font-spectral {
+  font-family: Spectral;
+}
+
+.tw-text-13xl {
+  font-size: 32px;
+}
+
+.tw-text-17xl {
+  font-size: 36px;
+}
+
+.tw-text-29xl {
+  font-size: 48px;
+}
+
+.tw-text-3xs {
+  font-size: 10px;
+}
+
+.tw-text-5xl {
+  font-size: 24px;
+}
+
+.tw-text-9xl {
+  font-size: 28px;
+}
+
+.tw-text-\[20\.6px\] {
+  font-size: 20.6px;
+}
+
+.tw-text-\[64px\] {
+  font-size: 64px;
+}
+
+.tw-text-base {
+  font-size: 16px;
+}
+
+.tw-text-inherit {
+  font-size: inherit;
+}
+
+.tw-text-lg {
+  font-size: 18px;
+}
+
+.tw-text-mini-1 {
+  font-size: 14.1px;
+}
+
+.tw-text-sm {
+  font-size: 14px;
+}
+
+.tw-text-xl {
+  font-size: 20px;
+}
+
+.tw-font-black {
+  font-weight: 900;
+}
+
+.tw-font-bold {
+  font-weight: 700;
+}
+
+.tw-font-extrabold {
+  font-weight: 800;
+}
+
+.tw-font-medium {
+  font-weight: 500;
+}
+
+.tw-font-normal {
+  font-weight: 400;
+}
+
+.tw-font-semibold {
+  font-weight: 600;
+}
+
+.tw-uppercase {
+  text-transform: uppercase;
+}
+
+.tw-capitalize {
+  text-transform: capitalize;
+}
+
+.tw-leading-\[140\%\] {
+  line-height: 140%;
+}
+
+.tw-leading-\[150\%\] {
+  line-height: 150%;
+}
+
+.tw-leading-\[20px\] {
+  line-height: 20px;
+}
+
+.tw-leading-\[25\.6px\] {
+  line-height: 25.6px;
+}
+
+.tw-leading-\[28px\] {
+  line-height: 28px;
+}
+
+.tw-leading-\[34px\] {
+  line-height: 34px;
+}
+
+.tw-leading-\[57\.6px\] {
+  line-height: 57.6px;
+}
+
+.tw-leading-\[88px\] {
+  line-height: 88px;
+}
+
+.tw-tracking-\[-0\.02em\] {
+  letter-spacing: -0.02em;
+}
+
+.tw-tracking-\[0\.04em\] {
+  letter-spacing: 0.04em;
+}
+
+.tw-tracking-\[0\.1px\] {
+  letter-spacing: 0.1px;
+}
+
+.tw-tracking-\[normal\] {
+  letter-spacing: normal;
+}
+
+.tw-tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tw-text-chestnut-800 {
+  --tw-text-opacity: 1;
+  color: rgb(37 37 37 / var(--tw-text-opacity));
+}
+
+.tw-text-darkseagreen {
+  --tw-text-opacity: 1;
+  color: rgb(154 210 174 / var(--tw-text-opacity));
+}
+
+.tw-text-darkslategray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(40 90 67 / var(--tw-text-opacity));
+}
+
+.tw-text-darkslategray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(20 89 64 / var(--tw-text-opacity));
+}
+
+.tw-text-gainsboro-300 {
+  --tw-text-opacity: 1;
+  color: rgb(224 216 205 / var(--tw-text-opacity));
+}
+
+.tw-text-gray1-100 {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.tw-text-gray1-200 {
+  color: rgba(18, 18, 18, 0.8);
+}
+
+.tw-text-gray1-300 {
+  color: rgba(35, 41, 41, 0.5);
+}
+
+.tw-text-inherit {
+  color: inherit;
+}
+
+.tw-text-light-gray-11 {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.tw-text-palegoldenrod {
+  --tw-text-opacity: 1;
+  color: rgb(235 225 172 / var(--tw-text-opacity));
+}
+
+.tw-text-red-50 {
+  --tw-text-opacity: 1;
+  color: rgb(254 242 242 / var(--tw-text-opacity));
+}
+
+.tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 
 .tw-transition-colors {
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
